[project]
name = "flask-openapi"
dynamic = ["version"]
description = "A simple API framework based on Flask."
readme = "README.md"
maintainers = [{ name = "llc", email = "luolingchun@outlook.com" }]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    # "Development Status :: 1 - Planning",
    # "Development Status :: 2 - Pre-Alpha",
    # "Development Status :: 3 - Alpha",
    # "Development Status :: 4 - Beta",
    "Development Status :: 5 - Production/Stable",
    # "Development Status :: 6 - Mature",
    # "Development Status :: 7 - Inactive",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.11"
dependencies = ["Flask>=2.0", "pydantic>=2.4"]

[project.urls]
Homepage = "https://github.com/luolingchun/flask-openapi"
Documentation = "https://luolingchun.github.io/flask-openapi"

[project.optional-dependencies]
yaml = ["pyyaml"]
async = ["asgiref >= 3.2"]
dotenv = ["python-dotenv"]
email = ["email-validator"]
# ui templates
swagger = ["flask-openapi-swagger"]
redoc = ["flask-openapi-redoc"]
rapidoc = ["flask-openapi-rapidoc"]
rapipdf = ["flask-openapi-rapipdf"]
scalar = ["flask-openapi-scalar"]
elements = ["flask-openapi-elements"]

[dependency-groups]
ty = ["ty"]
ruff = ["ruff"]
test = ["pytest", "asgiref", "pyyaml", "openapi-spec-validator"]
doc = [
    "mkdocs-static-i18n>=1.0",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-glightbox",
    "pyyaml",
    "mike",
]
dev = [
    "flask-openapi-swagger",
    "flask-openapi-redoc",
    "flask-openapi-rapidoc",
    "flask-openapi-rapipdf",
    "flask-openapi-scalar",
    "flask-openapi-elements"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "flask_openapi/__version__.py"

[tool.uv]
default-groups = "all"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "I", # Import related rules
    "E4", # Import order
    "E7", # Statement issues
    "E9", # Runtime errors
    "F", # Pyflakes rules
    "Q", # flake8-quotes
    "UP045", # Use X | None for type annotations
]

[tool.ruff.lint.per-file-ignores]
"flask_openapi/__init__.py" = ["F401"]
"flask_openapi/models/__init__.py" = ["F401"]
